tests/snapshots/formats__mp3__apetag.mp3.snap
---
source: tests/formats.rs
expression: "common::explore(&name, &data)"
---
▾ apetag.mp3 — MPEG-2.5 Layer III, 22 kbps, 11025 Hz, mono, 261 ms — Beep  [0x0+0x49a]
  ▾ ID3v2 tag — ID3v2.3, 3 frames: Beep  [0x0+0x54]
    ▾ Header  [0x0+0xa]
        Identifier: "ID3"  [0x0+0x3]
        Major version: 3  [0x3+0x1]
        Revision: 0  [0x4+0x1]
        Flags: 0x0 []  [0x5+0x1]
        Size: 74  [0x6+0x4]
    ▾ TIT2 — Title: Beep  [0xa+0x10]
        Frame ID: "TIT2"  [0xa+0x4]
        Size: 6  [0xe+0x4]
        Flags: 0x0 []  [0x12+0x2]
        Encoding: ISO-8859-1 (0x0)  [0x14+0x1]
        Text: "Beep"  [0x15+0x5]
    ▾ TXXX — TXXX: custom  [0x1a+0x17]
        Frame ID: "TXXX"  [0x1a+0x4]
        Size: 13  [0x1e+0x4]
        Flags: 0x0 []  [0x22+0x2]
        Encoding: ISO-8859-1 (0x0)  [0x24+0x1]
        Description: "TXXX"  [0x25+0x5]
        Value: "custom"  [0x2a+0x7]
    ▾ TSSE — Encoder settings: Lavf62.12.102  [0x31+0x19]
        Frame ID: "TSSE"  [0x31+0x4]
        Size: 15  [0x35+0x4]
        Flags: 0x0 []  [0x39+0x2]
        Encoding: ISO-8859-1 (0x0)  [0x3b+0x1]
        Text: "Lavf62.12.102"  [0x3c+0xe]
      Padding — 10 bytes  [0x4a+0xa]
  ▾ Xing header — CBR, 5 frames  [0x61+0xc3]
      ID: "Info"  [0x61+0x4]
      Flags: 0xf [FRAMES | BYTES | TOC | QUALITY]  [0x65+0x4]
      Frames: 5  [0x69+0x4]
      Bytes: 730  [0x6d+0x4]
      Table of contents: 00 6d 6d 6d 6d 6d 6d 6d 6d 6d 6d 6d 6d 6d 6d 6d …  |.mmmmmmmmmmmmmmm|  [0x71+0x64]
      Quality: 0  [0xd5+0x4]
      Encoder: "Lavc62.28"  [0xd9+0x9]
      Revision / VBR method: 0 — revision 0, unknown  [0xe2+0x1]
      Lowpass: 0 — 0 Hz  [0xe3+0x1]
      Peak amplitude: 0  [0xe4+0x4]
      Radio replay gain: 0x0  [0xe8+0x2]
      Audiophile replay gain: 0x0  [0xea+0x2]
      Encoding flags / ATH type: 0x0  [0xec+0x1]
      Bitrate: 0  [0xed+0x1]
      Encoder delay / padding: 2359946 — delay 576, padding 650  [0xee+0x3]
      Misc: 0x0  [0xf1+0x1]
      MP3 gain: 0  [0xf2+0x1]
      Preset / surround: 0x0  [0xf3+0x2]
      Music length: 730  [0xf5+0x4]
      Music CRC: 0x4fcd  [0xf9+0x2]
      Tag CRC: 0x976a  [0xfb+0x2]
  ▾ Frames — 5 frames  [0x54+0x2da]
    ▾ Frame 0 — MPEG-2.5 Layer III, 32 kbps, 11025 Hz, mono, 208 bytes  [0x54+0xd0]
      ▾ Header  [0x54+0x4]
          Frame sync: 0x7ff  [0x54+0x2]
          Version: MPEG-2.5 (0x0)  [0x55+0x1]
          Layer: Layer III (0x1)  [0x55+0x1]
          Protection: 1 — no CRC  [0x55+0x1]
          Bitrate index: 4 — 32 kbps  [0x56+0x1]
          Sample rate index: 0 — 11025 Hz  [0x56+0x1]
          Padding: false  [0x56+0x1]
          Private: false  [0x56+0x1]
          Channel mode: mono (0x3)  [0x57+0x1]
          Mode extension: 0  [0x57+0x1]
          Copyright: false  [0x57+0x1]
          Original: false  [0x57+0x1]
          Emphasis: none (0x0)  [0x57+0x1]
        Side information  [0x58+0x9]
      ▾ Xing header  [0x61+0xc3]
          ID: "Info"  [0x61+0x4]
          Flags: 0xf [FRAMES | BYTES | TOC | QUALITY]  [0x65+0x4]
          Frames: 5  [0x69+0x4]
          Bytes: 730  [0x6d+0x4]
          Table of contents: 00 6d 6d 6d 6d 6d 6d 6d 6d 6d 6d 6d 6d 6d 6d 6d …  |.mmmmmmmmmmmmmmm|  [0x71+0x64]
          Quality: 0  [0xd5+0x4]
          Encoder: "Lavc62.28"  [0xd9+0x9]
          Revision / VBR method: 0 — revision 0, unknown  [0xe2+0x1]
          Lowpass: 0 — 0 Hz  [0xe3+0x1]
          Peak amplitude: 0  [0xe4+0x4]
          Radio replay gain: 0x0  [0xe8+0x2]
          Audiophile replay gain: 0x0  [0xea+0x2]
          Encoding flags / ATH type: 0x0  [0xec+0x1]
          Bitrate: 0  [0xed+0x1]
          Encoder delay / padding: 2359946 — delay 576, padding 650  [0xee+0x3]
          Misc: 0x0  [0xf1+0x1]
          MP3 gain: 0  [0xf2+0x1]
          Preset / surround: 0x0  [0xf3+0x2]
          Music length: 730  [0xf5+0x4]
          Music CRC: 0x4fcd  [0xf9+0x2]
          Tag CRC: 0x976a  [0xfb+0x2]
    ▾ Frame 1 — MPEG-2.5 Layer III, 16 kbps, 11025 Hz, mono, 104 bytes  [0x124+0x68]
      ▾ Header  [0x124+0x4]
          Frame sync: 0x7ff  [0x124+0x2]
          Version: MPEG-2.5 (0x0)  [0x125+0x1]
          Layer: Layer III (0x1)  [0x125+0x1]
          Protection: 1 — no CRC  [0x125+0x1]
          Bitrate index: 2 — 16 kbps  [0x126+0x1]
          Sample rate index: 0 — 11025 Hz  [0x126+0x1]
          Padding: false  [0x126+0x1]
          Private: false  [0x126+0x1]
          Channel mode: mono (0x3)  [0x127+0x1]
          Mode extension: 0  [0x127+0x1]
          Copyright: false  [0x127+0x1]
          Original: true  [0x127+0x1]
          Emphasis: none (0x0)  [0x127+0x1]
        Side information  [0x128+0x9]
        Audio data  [0x131+0x5b]
    ▾ Frame 2 — MPEG-2.5 Layer III, 16 kbps, 11025 Hz, mono, 105 bytes  [0x18c+0x69]
      ▾ Header  [0x18c+0x4]
          Frame sync: 0x7ff  [0x18c+0x2]
          Version: MPEG-2.5 (0x0)  [0x18d+0x1]
          Layer: Layer III (0x1)  [0x18d+0x1]
          Protection: 1 — no CRC  [0x18d+0x1]
          Bitrate index: 2 — 16 kbps  [0x18e+0x1]
          Sample rate index: 0 — 11025 Hz  [0x18e+0x1]
          Padding: true  [0x18e+0x1]
          Private: false  [0x18e+0x1]
          Channel mode: mono (0x3)  [0x18f+0x1]
          Mode extension: 0  [0x18f+0x1]
          Copyright: false  [0x18f+0x1]
          Original: true  [0x18f+0x1]
          Emphasis: none (0x0)  [0x18f+0x1]
        Side information  [0x190+0x9]
        Audio data  [0x199+0x5c]
    ▾ Frame 3 — MPEG-2.5 Layer III, 16 kbps, 11025 Hz, mono, 104 bytes  [0x1f5+0x68]
      ▾ Header  [0x1f5+0x4]
          Frame sync: 0x7ff  [0x1f5+0x2]
          Version: MPEG-2.5 (0x0)  [0x1f6+0x1]
          Layer: Layer III (0x1)  [0x1f6+0x1]
          Protection: 1 — no CRC  [0x1f6+0x1]
          Bitrate index: 2 — 16 kbps  [0x1f7+0x1]
          Sample rate index: 0 — 11025 Hz  [0x1f7+0x1]
          Padding: false  [0x1f7+0x1]
          Private: false  [0x1f7+0x1]
          Channel mode: mono (0x3)  [0x1f8+0x1]
          Mode extension: 0  [0x1f8+0x1]
          Copyright: false  [0x1f8+0x1]
          Original: true  [0x1f8+0x1]
          Emphasis: none (0x0)  [0x1f8+0x1]
        Side information  [0x1f9+0x9]
        Audio data  [0x202+0x5b]
    ▾ Frame 4 — MPEG-2.5 Layer III, 16 kbps, 11025 Hz, mono, 105 bytes  [0x25d+0x69]
      ▾ Header  [0x25d+0x4]
          Frame sync: 0x7ff  [0x25d+0x2]
          Version: MPEG-2.5 (0x0)  [0x25e+0x1]
          Layer: Layer III (0x1)  [0x25e+0x1]
          Protection: 1 — no CRC  [0x25e+0x1]
          Bitrate index: 2 — 16 kbps  [0x25f+0x1]
          Sample rate index: 0 — 11025 Hz  [0x25f+0x1]
          Padding: true  [0x25f+0x1]
          Private: false  [0x25f+0x1]
          Channel mode: mono (0x3)  [0x260+0x1]
          Mode extension: 0  [0x260+0x1]
          Copyright: false  [0x260+0x1]
          Original: true  [0x260+0x1]
          Emphasis: none (0x0)  [0x260+0x1]
        Side information  [0x261+0x9]
        Audio data  [0x26a+0x5c]
    ▾ Frame 5 — MPEG-2.5 Layer III, 16 kbps, 11025 Hz, mono, 104 bytes  [0x2c6+0x68]
      ▾ Header  [0x2c6+0x4]
          Frame sync: 0x7ff  [0x2c6+0x2]
          Version: MPEG-2.5 (0x0)  [0x2c7+0x1]
          Layer: Layer III (0x1)  [0x2c7+0x1]
          Protection: 1 — no CRC  [0x2c7+0x1]
          Bitrate index: 2 — 16 kbps  [0x2c8+0x1]
          Sample rate index: 0 — 11025 Hz  [0x2c8+0x1]
          Padding: false  [0x2c8+0x1]
          Private: false  [0x2c8+0x1]
          Channel mode: mono (0x3)  [0x2c9+0x1]
          Mode extension: 0  [0x2c9+0x1]
          Copyright: false  [0x2c9+0x1]
          Original: true  [0x2c9+0x1]
          Emphasis: none (0x0)  [0x2c9+0x1]
        Side information  [0x2ca+0x9]
        Audio data  [0x2d3+0x5b]
  ▾ APE tag — APEv2, 3 items: fillyfoal – Beep  [0x32e+0xec]
    ▾ Header  [0x32e+0x20]
        Preamble: "APETAGEX"  [0x32e+0x8]
        Version: 2000  [0x336+0x4]
        Tag size: 204  [0x33a+0x4]
        Items: 3  [0x33e+0x4]
        Flags: 0xa0000000 [HAS_HEADER | IS_HEADER]  [0x342+0x4]
        Reserved: 00 00 00 00 00 00 00 00  |........|  [0x346+0x8]
    ▾ Items — 3 items  [0x34e+0xac]
      ▾ Title — Beep  [0x34e+0x12]
          Value size: 4  [0x34e+0x4]
          Flags: 0x0 [] — UTF-8 text  [0x352+0x4]
          Key: "Title"  [0x356+0x6]
          Value: "Beep"  [0x35c+0x4]
      ▾ Artist — fillyfoal  [0x360+0x18]
          Value size: 9  [0x360+0x4]
          Flags: 0x0 [] — UTF-8 text  [0x364+0x4]
          Key: "Artist"  [0x368+0x7]
          Value: "fillyfoal"  [0x36f+0x9]
      ▾ Cover Art (Front) — 104 bytes  [0x378+0x82]
          Value size: 104  [0x378+0x4]
          Flags: 0x2 [BINARY] — binary  [0x37c+0x4]
          Key: "Cover Art (Front)"  [0x380+0x12]
          File name: "c.png"  [0x392+0x6]
        ▾ Data — 8×8, 8-bit RGB  [0x398+0x62]
            Signature  [0x398+0x8]
          ▾ IHDR — 8×8, 8-bit RGB  [0x3a0+0x19]
              Length: 13  [0x3a0+0x4]
              Type: "IHDR" — critical, public, unsafe to copy  [0x3a4+0x4]
            ▾ Header  [0x3a8+0xd]
                Width: 8  [0x3a8+0x4]
                Height: 8  [0x3ac+0x4]
                Bit depth: 8  [0x3b0+0x1]
                Color type: RGB (0x2)  [0x3b1+0x1]
                Compression method: 0  [0x3b2+0x1]
                Filter method: 0  [0x3b3+0x1]
                Interlace method: None (0x0)  [0x3b4+0x1]
              CRC: 0x4b6d29dc — valid  [0x3b5+0x4]
          ▾ pHYs — 0x9 bytes  [0x3b9+0x15]
              Length: 9  [0x3b9+0x4]
              Type: "pHYs" — ancillary, public, safe to copy  [0x3bd+0x4]
            ▾ Physical dimensions  [0x3c1+0x9]
                Pixels per unit, X: 1  [0x3c1+0x4]
                Pixels per unit, Y: 1  [0x3c5+0x4]
                Unit: unknown (0x0)  [0x3c9+0x1]
              CRC: 0x4f25c4d6 — valid  [0x3ca+0x4]
          ▾ IDAT — 0x14 bytes  [0x3ce+0x20]
              Length: 20  [0x3ce+0x4]
              Type: "IDAT" — critical, public, unsafe to copy  [0x3d2+0x4]
              Data  [0x3d6+0x14]
              CRC: 0x1566a214 — valid  [0x3ea+0x4]
          ▾ IEND — 0x0 bytes  [0x3ee+0xc]
              Length: 0  [0x3ee+0x4]
              Type: "IEND" — critical, public, unsafe to copy  [0x3f2+0x4]
              Data  [0x3f6+0x0]
              CRC: 0xae426082 — valid  [0x3f6+0x4]
    ▾ Footer  [0x3fa+0x20]
        Preamble: "APETAGEX"  [0x3fa+0x8]
        Version: 2000  [0x402+0x4]
        Tag size: 204  [0x406+0x4]
        Items: 3  [0x40a+0x4]
        Flags: 0x80000000 [HAS_HEADER]  [0x40e+0x4]
        Reserved: 00 00 00 00 00 00 00 00  |........|  [0x412+0x8]
  ▾ ID3v1 tag — ID3v1.1: fillyfoal – Beep  [0x41a+0x80]
      Identifier: "TAG"  [0x41a+0x3]
      Title: "Beep"  [0x41d+0x1e]
      Artist: "fillyfoal"  [0x43b+0x1e]
      Album: ""  [0x459+0x1e]
      Year: "2026"  [0x477+0x4]
      Comment: "v1 comment"  [0x47b+0x1e]
      Genre: 8 — Jazz  [0x499+0x1]
      Track: 5  [0x498+0x1]
