tests/snapshots/formats__mp3__cbr-id3v23.mp3.snap
---
source: tests/formats.rs
expression: "common::explore(&name, &data)"
---
▾ cbr-id3v23.mp3 — MPEG-2.5 Layer III, 22 kbps, 11025 Hz, mono, 261 ms — Beep  [0x0+0x32e]
  ▾ ID3v2 tag — ID3v2.3, 3 frames: Beep  [0x0+0x54]
    ▾ Header  [0x0+0xa]
        Identifier: "ID3"  [0x0+0x3]
        Major version: 3  [0x3+0x1]
        Revision: 0  [0x4+0x1]
        Flags: 0x0 []  [0x5+0x1]
        Size: 74  [0x6+0x4]
    ▾ TIT2 — Title: Beep  [0xa+0x10]
        Frame ID: "TIT2"  [0xa+0x4]
        Size: 6  [0xe+0x4]
        Flags: 0x0 []  [0x12+0x2]
        Encoding: ISO-8859-1 (0x0)  [0x14+0x1]
        Text: "Beep"  [0x15+0x5]
    ▾ TXXX — TXXX: custom  [0x1a+0x17]
        Frame ID: "TXXX"  [0x1a+0x4]
        Size: 13  [0x1e+0x4]
        Flags: 0x0 []  [0x22+0x2]
        Encoding: ISO-8859-1 (0x0)  [0x24+0x1]
        Description: "TXXX"  [0x25+0x5]
        Value: "custom"  [0x2a+0x7]
    ▾ TSSE — Encoder settings: Lavf62.12.102  [0x31+0x19]
        Frame ID: "TSSE"  [0x31+0x4]
        Size: 15  [0x35+0x4]
        Flags: 0x0 []  [0x39+0x2]
        Encoding: ISO-8859-1 (0x0)  [0x3b+0x1]
        Text: "Lavf62.12.102"  [0x3c+0xe]
      Padding — 10 bytes  [0x4a+0xa]
  ▾ Xing header — CBR, 5 frames  [0x61+0xc3]
      ID: "Info"  [0x61+0x4]
      Flags: 0xf [FRAMES | BYTES | TOC | QUALITY]  [0x65+0x4]
      Frames: 5  [0x69+0x4]
      Bytes: 730  [0x6d+0x4]
      Table of contents: 00 6d 6d 6d 6d 6d 6d 6d 6d 6d 6d 6d 6d 6d 6d 6d …  |.mmmmmmmmmmmmmmm|  [0x71+0x64]
      Quality: 0  [0xd5+0x4]
      Encoder: "Lavc62.28"  [0xd9+0x9]
      Revision / VBR method: 0 — revision 0, unknown  [0xe2+0x1]
      Lowpass: 0 — 0 Hz  [0xe3+0x1]
      Peak amplitude: 0  [0xe4+0x4]
      Radio replay gain: 0x0  [0xe8+0x2]
      Audiophile replay gain: 0x0  [0xea+0x2]
      Encoding flags / ATH type: 0x0  [0xec+0x1]
      Bitrate: 0  [0xed+0x1]
      Encoder delay / padding: 2359946 — delay 576, padding 650  [0xee+0x3]
      Misc: 0x0  [0xf1+0x1]
      MP3 gain: 0  [0xf2+0x1]
      Preset / surround: 0x0  [0xf3+0x2]
      Music length: 730  [0xf5+0x4]
      Music CRC: 0x4fcd  [0xf9+0x2]
      Tag CRC: 0x976a  [0xfb+0x2]
  ▾ Frames — 5 frames  [0x54+0x2da]
    ▾ Frame 0 — MPEG-2.5 Layer III, 32 kbps, 11025 Hz, mono, 208 bytes  [0x54+0xd0]
      ▾ Header  [0x54+0x4]
          Frame sync: 0x7ff  [0x54+0x2]
          Version: MPEG-2.5 (0x0)  [0x55+0x1]
          Layer: Layer III (0x1)  [0x55+0x1]
          Protection: 1 — no CRC  [0x55+0x1]
          Bitrate index: 4 — 32 kbps  [0x56+0x1]
          Sample rate index: 0 — 11025 Hz  [0x56+0x1]
          Padding: false  [0x56+0x1]
          Private: false  [0x56+0x1]
          Channel mode: mono (0x3)  [0x57+0x1]
          Mode extension: 0  [0x57+0x1]
          Copyright: false  [0x57+0x1]
          Original: false  [0x57+0x1]
          Emphasis: none (0x0)  [0x57+0x1]
        Side information  [0x58+0x9]
      ▾ Xing header  [0x61+0xc3]
          ID: "Info"  [0x61+0x4]
          Flags: 0xf [FRAMES | BYTES | TOC | QUALITY]  [0x65+0x4]
          Frames: 5  [0x69+0x4]
          Bytes: 730  [0x6d+0x4]
          Table of contents: 00 6d 6d 6d 6d 6d 6d 6d 6d 6d 6d 6d 6d 6d 6d 6d …  |.mmmmmmmmmmmmmmm|  [0x71+0x64]
          Quality: 0  [0xd5+0x4]
          Encoder: "Lavc62.28"  [0xd9+0x9]
          Revision / VBR method: 0 — revision 0, unknown  [0xe2+0x1]
          Lowpass: 0 — 0 Hz  [0xe3+0x1]
          Peak amplitude: 0  [0xe4+0x4]
          Radio replay gain: 0x0  [0xe8+0x2]
          Audiophile replay gain: 0x0  [0xea+0x2]
          Encoding flags / ATH type: 0x0  [0xec+0x1]
          Bitrate: 0  [0xed+0x1]
          Encoder delay / padding: 2359946 — delay 576, padding 650  [0xee+0x3]
          Misc: 0x0  [0xf1+0x1]
          MP3 gain: 0  [0xf2+0x1]
          Preset / surround: 0x0  [0xf3+0x2]
          Music length: 730  [0xf5+0x4]
          Music CRC: 0x4fcd  [0xf9+0x2]
          Tag CRC: 0x976a  [0xfb+0x2]
    ▾ Frame 1 — MPEG-2.5 Layer III, 16 kbps, 11025 Hz, mono, 104 bytes  [0x124+0x68]
      ▾ Header  [0x124+0x4]
          Frame sync: 0x7ff  [0x124+0x2]
          Version: MPEG-2.5 (0x0)  [0x125+0x1]
          Layer: Layer III (0x1)  [0x125+0x1]
          Protection: 1 — no CRC  [0x125+0x1]
          Bitrate index: 2 — 16 kbps  [0x126+0x1]
          Sample rate index: 0 — 11025 Hz  [0x126+0x1]
          Padding: false  [0x126+0x1]
          Private: false  [0x126+0x1]
          Channel mode: mono (0x3)  [0x127+0x1]
          Mode extension: 0  [0x127+0x1]
          Copyright: false  [0x127+0x1]
          Original: true  [0x127+0x1]
          Emphasis: none (0x0)  [0x127+0x1]
        Side information  [0x128+0x9]
        Audio data  [0x131+0x5b]
    ▾ Frame 2 — MPEG-2.5 Layer III, 16 kbps, 11025 Hz, mono, 105 bytes  [0x18c+0x69]
      ▾ Header  [0x18c+0x4]
          Frame sync: 0x7ff  [0x18c+0x2]
          Version: MPEG-2.5 (0x0)  [0x18d+0x1]
          Layer: Layer III (0x1)  [0x18d+0x1]
          Protection: 1 — no CRC  [0x18d+0x1]
          Bitrate index: 2 — 16 kbps  [0x18e+0x1]
          Sample rate index: 0 — 11025 Hz  [0x18e+0x1]
          Padding: true  [0x18e+0x1]
          Private: false  [0x18e+0x1]
          Channel mode: mono (0x3)  [0x18f+0x1]
          Mode extension: 0  [0x18f+0x1]
          Copyright: false  [0x18f+0x1]
          Original: true  [0x18f+0x1]
          Emphasis: none (0x0)  [0x18f+0x1]
        Side information  [0x190+0x9]
        Audio data  [0x199+0x5c]
    ▾ Frame 3 — MPEG-2.5 Layer III, 16 kbps, 11025 Hz, mono, 104 bytes  [0x1f5+0x68]
      ▾ Header  [0x1f5+0x4]
          Frame sync: 0x7ff  [0x1f5+0x2]
          Version: MPEG-2.5 (0x0)  [0x1f6+0x1]
          Layer: Layer III (0x1)  [0x1f6+0x1]
          Protection: 1 — no CRC  [0x1f6+0x1]
          Bitrate index: 2 — 16 kbps  [0x1f7+0x1]
          Sample rate index: 0 — 11025 Hz  [0x1f7+0x1]
          Padding: false  [0x1f7+0x1]
          Private: false  [0x1f7+0x1]
          Channel mode: mono (0x3)  [0x1f8+0x1]
          Mode extension: 0  [0x1f8+0x1]
          Copyright: false  [0x1f8+0x1]
          Original: true  [0x1f8+0x1]
          Emphasis: none (0x0)  [0x1f8+0x1]
        Side information  [0x1f9+0x9]
        Audio data  [0x202+0x5b]
    ▾ Frame 4 — MPEG-2.5 Layer III, 16 kbps, 11025 Hz, mono, 105 bytes  [0x25d+0x69]
      ▾ Header  [0x25d+0x4]
          Frame sync: 0x7ff  [0x25d+0x2]
          Version: MPEG-2.5 (0x0)  [0x25e+0x1]
          Layer: Layer III (0x1)  [0x25e+0x1]
          Protection: 1 — no CRC  [0x25e+0x1]
          Bitrate index: 2 — 16 kbps  [0x25f+0x1]
          Sample rate index: 0 — 11025 Hz  [0x25f+0x1]
          Padding: true  [0x25f+0x1]
          Private: false  [0x25f+0x1]
          Channel mode: mono (0x3)  [0x260+0x1]
          Mode extension: 0  [0x260+0x1]
          Copyright: false  [0x260+0x1]
          Original: true  [0x260+0x1]
          Emphasis: none (0x0)  [0x260+0x1]
        Side information  [0x261+0x9]
        Audio data  [0x26a+0x5c]
    ▾ Frame 5 — MPEG-2.5 Layer III, 16 kbps, 11025 Hz, mono, 104 bytes  [0x2c6+0x68]
      ▾ Header  [0x2c6+0x4]
          Frame sync: 0x7ff  [0x2c6+0x2]
          Version: MPEG-2.5 (0x0)  [0x2c7+0x1]
          Layer: Layer III (0x1)  [0x2c7+0x1]
          Protection: 1 — no CRC  [0x2c7+0x1]
          Bitrate index: 2 — 16 kbps  [0x2c8+0x1]
          Sample rate index: 0 — 11025 Hz  [0x2c8+0x1]
          Padding: false  [0x2c8+0x1]
          Private: false  [0x2c8+0x1]
          Channel mode: mono (0x3)  [0x2c9+0x1]
          Mode extension: 0  [0x2c9+0x1]
          Copyright: false  [0x2c9+0x1]
          Original: true  [0x2c9+0x1]
          Emphasis: none (0x0)  [0x2c9+0x1]
        Side information  [0x2ca+0x9]
        Audio data  [0x2d3+0x5b]
