tests/snapshots/formats__mp3__junk-tags.mp3.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ junk-tags.mp3 — MPEG-2 Layer III, 32 kbps, 16000 Hz, mono, 341 ms — fillyfoal – Tone  [0x0+0x739]
  ▾ Frames — 1.3 KiB  [0x0+0x555]
    ▾ Frame 0 — MPEG-2 Layer III, 32 kbps, 16000 Hz, mono, 144 bytes  [0x0+0x90]
      ▾ Header  [0x0+0x4]
          Frame sync: 0x7ff  [0x0+0x2]
          Version: MPEG-2 (0x2)  [0x1+0x1]
          Layer: Layer III (0x1)  [0x1+0x1]
          Protection: 1 — no CRC  [0x1+0x1]
          Bitrate index: 4 — 32 kbps  [0x2+0x1]
          Sample rate index: 2 — 16000 Hz  [0x2+0x1]
          Padding: false  [0x2+0x1]
          Private: false  [0x2+0x1]
          Channel mode: mono (0x3)  [0x3+0x1]
          Mode extension: 0  [0x3+0x1]
          Copyright: false  [0x3+0x1]
          Original: true — original  [0x3+0x1]
          Emphasis: none (0x0)  [0x3+0x1]
      ▾ Side information  [0x4+0x9]
          Main data begin: 0 — starts in this frame  [0x4+0x1]
          Private bits: 0  [0x5+0x1]
        ▾ Granule — start block, 911 bits, global gain 155  [0x5+0x8]
            Part 2–3 length: 911 — 911 bits  [0x5+0x2]
            Big values: 35  [0x6+0x2]
            Global gain: 155  [0x7+0x2]
            Scale factor compression: 10  [0x8+0x2]
            Window switching: true  [0x9+0x1]
            Block type: start (0x1)  [0xa+0x1]
            Mixed block: false  [0xa+0x1]
            Table select (region 0): 24  [0xa+0x1]
            Table select (region 1): 6  [0xb+0x1]
            Subblock gain (window 0): 0  [0xb+0x1]
            Subblock gain (window 1): 0  [0xc+0x1]
            Subblock gain (window 2): 0  [0xc+0x1]
            Scale factor scale: 0 — √2 steps  [0xc+0x1]
            Count1 table: 0 — table A  [0xc+0x1]
        Main data — 131 bytes  [0xd+0x83]
    ▾ Frame 1 — MPEG-2 Layer III, 32 kbps, 16000 Hz, mono, 144 bytes  [0x90+0x90]
      ▾ Header  [0x90+0x4]
          Frame sync: 0x7ff  [0x90+0x2]
          Version: MPEG-2 (0x2)  [0x91+0x1]
          Layer: Layer III (0x1)  [0x91+0x1]
          Protection: 1 — no CRC  [0x91+0x1]
          Bitrate index: 4 — 32 kbps  [0x92+0x1]
          Sample rate index: 2 — 16000 Hz  [0x92+0x1]
          Padding: false  [0x92+0x1]
          Private: false  [0x92+0x1]
          Channel mode: mono (0x3)  [0x93+0x1]
          Mode extension: 0  [0x93+0x1]
          Copyright: false  [0x93+0x1]
          Original: true — original  [0x93+0x1]
          Emphasis: none (0x0)  [0x93+0x1]
      ▾ Side information  [0x94+0x9]
          Main data begin: 17 — 17 bytes back in the bit reservoir  [0x94+0x1]
          Private bits: 0  [0x95+0x1]
        ▾ Granule — short blocks, 1044 bits, global gain 155  [0x95+0x8]
            Part 2–3 length: 1044 — 1044 bits  [0x95+0x2]
            Big values: 125  [0x96+0x2]
            Global gain: 155  [0x97+0x2]
            Scale factor compression: 22  [0x98+0x2]
            Window switching: true  [0x99+0x1]
            Block type: short (3 windows) (0x2)  [0x9a+0x1]
            Mixed block: false  [0x9a+0x1]
            Table select (region 0): 29  [0x9a+0x1]
            Table select (region 1): 20  [0x9b+0x1]
            Subblock gain (window 0): 0  [0x9b+0x1]
            Subblock gain (window 1): 0  [0x9c+0x1]
            Subblock gain (window 2): 0  [0x9c+0x1]
            Scale factor scale: 0 — √2 steps  [0x9c+0x1]
            Count1 table: 0 — table A  [0x9c+0x1]
        Main data — 131 bytes  [0x9d+0x83]
    ▾ Frame 2 — MPEG-2 Layer III, 32 kbps, 16000 Hz, mono, 144 bytes  [0x120+0x90]
      ▾ Header  [0x120+0x4]
          Frame sync: 0x7ff  [0x120+0x2]
          Version: MPEG-2 (0x2)  [0x121+0x1]
          Layer: Layer III (0x1)  [0x121+0x1]
          Protection: 1 — no CRC  [0x121+0x1]
          Bitrate index: 4 — 32 kbps  [0x122+0x1]
          Sample rate index: 2 — 16000 Hz  [0x122+0x1]
          Padding: false  [0x122+0x1]
          Private: false  [0x122+0x1]
          Channel mode: mono (0x3)  [0x123+0x1]
          Mode extension: 0  [0x123+0x1]
          Copyright: false  [0x123+0x1]
          Original: true — original  [0x123+0x1]
          Emphasis: none (0x0)  [0x123+0x1]
      ▾ Side information  [0x124+0x9]
          Main data begin: 17 — 17 bytes back in the bit reservoir  [0x124+0x1]
          Private bits: 0  [0x125+0x1]
        ▾ Granule — stop block, 819 bits, global gain 137  [0x125+0x8]
            Part 2–3 length: 819 — 819 bits  [0x125+0x2]
            Big values: 29  [0x126+0x2]
            Global gain: 137  [0x127+0x2]
            Scale factor compression: 283  [0x128+0x2]
            Window switching: true  [0x129+0x1]
            Block type: stop (0x3)  [0x12a+0x1]
            Mixed block: false  [0x12a+0x1]
            Table select (region 0): 30  [0x12a+0x1]
            Table select (region 1): 8  [0x12b+0x1]
            Subblock gain (window 0): 0  [0x12b+0x1]
            Subblock gain (window 1): 0  [0x12c+0x1]
            Subblock gain (window 2): 0  [0x12c+0x1]
            Scale factor scale: 0 — √2 steps  [0x12c+0x1]
            Count1 table: 0 — table A  [0x12c+0x1]
        Main data — 131 bytes  [0x12d+0x83]
      Junk — 37 bytes, frame sync lost  [0x1b0+0x25]
        ! warning: 37 bytes between frames that are not a frame
    ▾ Frame 3 — MPEG-2 Layer III, 32 kbps, 16000 Hz, mono, 144 bytes  [0x1d5+0x90]
      ▾ Header  [0x1d5+0x4]
          Frame sync: 0x7ff  [0x1d5+0x2]
          Version: MPEG-2 (0x2)  [0x1d6+0x1]
          Layer: Layer III (0x1)  [0x1d6+0x1]
          Protection: 1 — no CRC  [0x1d6+0x1]
          Bitrate index: 4 — 32 kbps  [0x1d7+0x1]
          Sample rate index: 2 — 16000 Hz  [0x1d7+0x1]
          Padding: false  [0x1d7+0x1]
          Private: false  [0x1d7+0x1]
          Channel mode: mono (0x3)  [0x1d8+0x1]
          Mode extension: 0  [0x1d8+0x1]
          Copyright: false  [0x1d8+0x1]
          Original: true — original  [0x1d8+0x1]
          Emphasis: none (0x0)  [0x1d8+0x1]
      ▾ Side information  [0x1d9+0x9]
          Main data begin: 45 — 45 bytes back in the bit reservoir  [0x1d9+0x1]
          Private bits: 0  [0x1da+0x1]
        ▾ Granule — long blocks, 1148 bits, global gain 129  [0x1da+0x8]
            Part 2–3 length: 1148 — 1148 bits  [0x1da+0x2]
            Big values: 238  [0x1db+0x2]
            Global gain: 129  [0x1dc+0x2]
            Scale factor compression: 0  [0x1dd+0x2]
            Window switching: false  [0x1de+0x1]
            Table select (region 0): 27  [0x1df+0x1]
            Table select (region 1): 31  [0x1df+0x2]
            Table select (region 2): 2  [0x1e0+0x1]
            Region 0 count: 3  [0x1e0+0x2]
            Region 1 count: 4  [0x1e1+0x1]
            Scale factor scale: 0 — √2 steps  [0x1e1+0x1]
            Count1 table: 0 — table A  [0x1e1+0x1]
        Main data — 131 bytes  [0x1e2+0x83]
    ▾ Frame 4 — MPEG-2 Layer III, 32 kbps, 16000 Hz, mono, 144 bytes  [0x265+0x90]
      ▾ Header  [0x265+0x4]
          Frame sync: 0x7ff  [0x265+0x2]
          Version: MPEG-2 (0x2)  [0x266+0x1]
          Layer: Layer III (0x1)  [0x266+0x1]
          Protection: 1 — no CRC  [0x266+0x1]
          Bitrate index: 4 — 32 kbps  [0x267+0x1]
          Sample rate index: 2 — 16000 Hz  [0x267+0x1]
          Padding: false  [0x267+0x1]
          Private: false  [0x267+0x1]
          Channel mode: mono (0x3)  [0x268+0x1]
          Mode extension: 0  [0x268+0x1]
          Copyright: false  [0x268+0x1]
          Original: true — original  [0x268+0x1]
          Emphasis: none (0x0)  [0x268+0x1]
      ▾ Side information  [0x269+0x9]
          Main data begin: 32 — 32 bytes back in the bit reservoir  [0x269+0x1]
          Private bits: 0  [0x26a+0x1]
        ▾ Granule — long blocks, 1056 bits, global gain 131  [0x26a+0x8]
            Part 2–3 length: 1056 — 1056 bits  [0x26a+0x2]
            Big values: 239  [0x26b+0x2]
            Global gain: 131  [0x26c+0x2]
            Scale factor compression: 244  [0x26d+0x2]
            Window switching: false  [0x26e+0x1]
            Table select (region 0): 31  [0x26f+0x1]
            Table select (region 1): 29  [0x26f+0x2]
            Table select (region 2): 2  [0x270+0x1]
            Region 0 count: 5  [0x270+0x2]
            Region 1 count: 2  [0x271+0x1]
            Scale factor scale: 0 — √2 steps  [0x271+0x1]
            Count1 table: 0 — table A  [0x271+0x1]
        Main data — 131 bytes  [0x272+0x83]
    ▾ Frame 5 — MPEG-2 Layer III, 32 kbps, 16000 Hz, mono, 144 bytes  [0x2f5+0x90]
      ▾ Header  [0x2f5+0x4]
          Frame sync: 0x7ff  [0x2f5+0x2]
          Version: MPEG-2 (0x2)  [0x2f6+0x1]
          Layer: Layer III (0x1)  [0x2f6+0x1]
          Protection: 1 — no CRC  [0x2f6+0x1]
          Bitrate index: 4 — 32 kbps  [0x2f7+0x1]
          Sample rate index: 2 — 16000 Hz  [0x2f7+0x1]
          Padding: false  [0x2f7+0x1]
          Private: false  [0x2f7+0x1]
          Channel mode: mono (0x3)  [0x2f8+0x1]
          Mode extension: 0  [0x2f8+0x1]
          Copyright: false  [0x2f8+0x1]
          Original: true — original  [0x2f8+0x1]
          Emphasis: none (0x0)  [0x2f8+0x1]
      ▾ Side information  [0x2f9+0x9]
          Main data begin: 31 — 31 bytes back in the bit reservoir  [0x2f9+0x1]
          Private bits: 0  [0x2fa+0x1]
        ▾ Granule — long blocks, 1008 bits, global gain 133  [0x2fa+0x8]
            Part 2–3 length: 1008 — 1008 bits  [0x2fa+0x2]
            Big values: 239  [0x2fb+0x2]
            Global gain: 133  [0x2fc+0x2]
            Scale factor compression: 250  [0x2fd+0x2]
            Window switching: false  [0x2fe+0x1]
            Table select (region 0): 29  [0x2ff+0x1]
            Table select (region 1): 31  [0x2ff+0x2]
            Table select (region 2): 5  [0x300+0x1]
            Region 0 count: 4  [0x300+0x2]
            Region 1 count: 2  [0x301+0x1]
            Scale factor scale: 0 — √2 steps  [0x301+0x1]
            Count1 table: 0 — table A  [0x301+0x1]
        Main data — 131 bytes  [0x302+0x83]
    ▾ ID3v2 tag — ID3v2.3, 1 frame, 32 bytes: Second file  [0x385+0x20]
      ▾ Header  [0x385+0xa]
          Identifier: "ID3"  [0x385+0x3]
          Major version: 3 — ID3v2.3  [0x388+0x1]
          Revision: 0  [0x389+0x1]
          Flags: 0x0 []  [0x38a+0x1]
          Size: 22 — 22 bytes  [0x38b+0x4]
      ▾ TIT2 — Title: Second file  [0x38f+0x16]
          Frame ID: "TIT2"  [0x38f+0x4]
          Size: 12  [0x393+0x4]
          Flags: 0x0 []  [0x397+0x2]
          Encoding: ISO-8859-1 (0x0)  [0x399+0x1]
          Text: "Second file"  [0x39a+0xb]
    ▾ Frame 6 — MPEG-2 Layer III, 32 kbps, 16000 Hz, mono, 144 bytes  [0x3a5+0x90]
      ▾ Header  [0x3a5+0x4]
          Frame sync: 0x7ff  [0x3a5+0x2]
          Version: MPEG-2 (0x2)  [0x3a6+0x1]
          Layer: Layer III (0x1)  [0x3a6+0x1]
          Protection: 1 — no CRC  [0x3a6+0x1]
          Bitrate index: 4 — 32 kbps  [0x3a7+0x1]
          Sample rate index: 2 — 16000 Hz  [0x3a7+0x1]
          Padding: false  [0x3a7+0x1]
          Private: false  [0x3a7+0x1]
          Channel mode: mono (0x3)  [0x3a8+0x1]
          Mode extension: 0  [0x3a8+0x1]
          Copyright: false  [0x3a8+0x1]
          Original: true — original  [0x3a8+0x1]
          Emphasis: none (0x0)  [0x3a8+0x1]
      ▾ Side information  [0x3a9+0x9]
          Main data begin: 36 — 36 bytes back in the bit reservoir  [0x3a9+0x1]
          Private bits: 0  [0x3aa+0x1]
        ▾ Granule — long blocks, 781 bits, global gain 134  [0x3aa+0x8]
            Part 2–3 length: 781 — 781 bits  [0x3aa+0x2]
            Big values: 29  [0x3ab+0x2]
            Global gain: 134  [0x3ac+0x2]
            Scale factor compression: 4  [0x3ad+0x2]
            Window switching: false  [0x3ae+0x1]
            Table select (region 0): 26  [0x3af+0x1]
            Table select (region 1): 31  [0x3af+0x2]
            Table select (region 2): 28  [0x3b0+0x1]
            Region 0 count: 3  [0x3b0+0x2]
            Region 1 count: 1  [0x3b1+0x1]
            Scale factor scale: 1 — 2× steps  [0x3b1+0x1]
            Count1 table: 0 — table A  [0x3b1+0x1]
        Main data — 131 bytes  [0x3b2+0x83]
    ▾ Frame 7 — MPEG-2 Layer III, 32 kbps, 16000 Hz, mono, 144 bytes  [0x435+0x90]
      ▾ Header  [0x435+0x4]
          Frame sync: 0x7ff  [0x435+0x2]
          Version: MPEG-2 (0x2)  [0x436+0x1]
          Layer: Layer III (0x1)  [0x436+0x1]
          Protection: 1 — no CRC  [0x436+0x1]
          Bitrate index: 4 — 32 kbps  [0x437+0x1]
          Sample rate index: 2 — 16000 Hz  [0x437+0x1]
          Padding: false  [0x437+0x1]
          Private: false  [0x437+0x1]
          Channel mode: mono (0x3)  [0x438+0x1]
          Mode extension: 0  [0x438+0x1]
          Copyright: false  [0x438+0x1]
          Original: true — original  [0x438+0x1]
          Emphasis: none (0x0)  [0x438+0x1]
      ▾ Side information  [0x439+0x9]
          Main data begin: 69 — 69 bytes back in the bit reservoir  [0x439+0x1]
          Private bits: 0  [0x43a+0x1]
        ▾ Granule — long blocks, 835 bits, global gain 133  [0x43a+0x8]
            Part 2–3 length: 835 — 835 bits  [0x43a+0x2]
            Big values: 55  [0x43b+0x2]
            Global gain: 133  [0x43c+0x2]
            Scale factor compression: 0  [0x43d+0x2]
            Window switching: false  [0x43e+0x1]
            Table select (region 0): 29  [0x43f+0x1]
            Table select (region 1): 31  [0x43f+0x2]
            Table select (region 2): 21  [0x440+0x1]
            Region 0 count: 4  [0x440+0x2]
            Region 1 count: 0  [0x441+0x1]
            Scale factor scale: 0 — √2 steps  [0x441+0x1]
            Count1 table: 0 — table A  [0x441+0x1]
        Main data — 131 bytes  [0x442+0x83]
    ▾ Frame 8 — MPEG-2 Layer III, 32 kbps, 16000 Hz, mono, 144 bytes  [0x4c5+0x90]
      ▾ Header  [0x4c5+0x4]
          Frame sync: 0x7ff  [0x4c5+0x2]
          Version: MPEG-2 (0x2)  [0x4c6+0x1]
          Layer: Layer III (0x1)  [0x4c6+0x1]
          Protection: 1 — no CRC  [0x4c6+0x1]
          Bitrate index: 4 — 32 kbps  [0x4c7+0x1]
          Sample rate index: 2 — 16000 Hz  [0x4c7+0x1]
          Padding: false  [0x4c7+0x1]
          Private: false  [0x4c7+0x1]
          Channel mode: mono (0x3)  [0x4c8+0x1]
          Mode extension: 0  [0x4c8+0x1]
          Copyright: false  [0x4c8+0x1]
          Original: true — original  [0x4c8+0x1]
          Emphasis: none (0x0)  [0x4c8+0x1]
      ▾ Side information  [0x4c9+0x9]
          Main data begin: 95 — 95 bytes back in the bit reservoir  [0x4c9+0x1]
          Private bits: 0  [0x4ca+0x1]
        ▾ Granule — long blocks, 735 bits, global gain 135  [0x4ca+0x8]
            Part 2–3 length: 735 — 735 bits  [0x4ca+0x2]
            Big values: 29  [0x4cb+0x2]
            Global gain: 135  [0x4cc+0x2]
            Scale factor compression: 165  [0x4cd+0x2]
            Window switching: false  [0x4ce+0x1]
            Table select (region 0): 28  [0x4cf+0x1]
            Table select (region 1): 31  [0x4cf+0x2]
            Table select (region 2): 29  [0x4d0+0x1]
            Region 0 count: 4  [0x4d0+0x2]
            Region 1 count: 0  [0x4d1+0x1]
            Scale factor scale: 0 — √2 steps  [0x4d1+0x1]
            Count1 table: 0 — table A  [0x4d1+0x1]
        Main data — 131 bytes  [0x4d2+0x83]
  ▾ ID3v2 tag — ID3v2.4, 1 frame, 39 bytes: Appended  [0x555+0x27]
    ▾ Header  [0x555+0xa]
        Identifier: "ID3"  [0x555+0x3]
        Major version: 4 — ID3v2.4  [0x558+0x1]
        Revision: 0  [0x559+0x1]
        Flags: 0x10 [FOOTER]  [0x55a+0x1]
        Size: 19 — 19 bytes  [0x55b+0x4]
    ▾ TIT2 — Title: Appended  [0x55f+0x13]
        Frame ID: "TIT2"  [0x55f+0x4]
        Size: 9  [0x563+0x4]
        Flags: 0x0 []  [0x567+0x2]
        Encoding: UTF-8 (0x3)  [0x569+0x1]
        Text: "Appended"  [0x56a+0x8]
    ▾ Footer  [0x572+0xa]
        Identifier: "3DI"  [0x572+0x3]
        Major version: 4 — ID3v2.4  [0x575+0x1]
        Revision: 0  [0x576+0x1]
        Flags: 0x10 [FOOTER]  [0x577+0x1]
        Size: 19 — 19 bytes  [0x578+0x4]
  ▾ Lyrics3v2 tag — 90 bytes  [0x57c+0x5a]
      Begin marker: "LYRICSBEGIN"  [0x57c+0xb]
      IND: "10" — 10  [0x587+0xa]
      LYR: "[00:00]la la\r\n[00:01]la" — [00:00]la la  [00:01]la  [0x591+0x1f]
      ETT: "Tone (extended)" — Tone (extended)  [0x5b0+0x17]
      Size: "000075"  [0x5c7+0x6]
      End marker: "LYRICS200"  [0x5cd+0x9]
  ▾ Enhanced tag (TAG+) — fillyfoal – Tone  [0x5d6+0xe3]
      Identifier: "TAG+"  [0x5d6+0x4]
      Title: "Tone"  [0x5da+0x3c]
      Artist: "fillyfoal"  [0x616+0x3c]
      Album: "Fixtures"  [0x652+0x3c]
      Speed: medium (0x2)  [0x68e+0x1]
      Genre: "Synthwave"  [0x68f+0x1e]
      Start time: "000:00"  [0x6ad+0x6]
      End time: "000:01"  [0x6b3+0x6]
  ▾ ID3v1 tag — ID3v1: fillyfoal – Tone (Fixtures, 2019), Techno  [0x6b9+0x80]
      Identifier: "TAG"  [0x6b9+0x3]
      Title: "Tone"  [0x6bc+0x1e]
      Artist: "fillyfoal"  [0x6da+0x1e]
      Album: "Fixtures"  [0x6f8+0x1e]
      Year: "2019"  [0x716+0x4]
      Comment: "no track number"  [0x71a+0x1e]
      Genre: 18 — Techno  [0x738+0x1]
