tests/snapshots/formats__mp3__layer2.mp2.snap
---
source: tests/formats.rs
expression: "common::explore(&name, &data)"
---
▾ layer2.mp2 — MPEG-2 Layer II, 32 kbps, 16000 Hz, mono, 144 ms  [0x0+0x240]
  ▾ Frames — 576 bytes  [0x0+0x240]
    ▾ Frame 0 — MPEG-2 Layer II, 32 kbps, 16000 Hz, mono, 288 bytes  [0x0+0x120]
      ▾ Header  [0x0+0x4]
          Frame sync: 0x7ff  [0x0+0x2]
          Version: MPEG-2 (0x2)  [0x1+0x1]
          Layer: Layer II (0x2)  [0x1+0x1]
          Protection: 1 — no CRC  [0x1+0x1]
          Bitrate index: 4 — 32 kbps  [0x2+0x1]
          Sample rate index: 2 — 16000 Hz  [0x2+0x1]
          Padding: false  [0x2+0x1]
          Private: false  [0x2+0x1]
          Channel mode: mono (0x3)  [0x3+0x1]
          Mode extension: 0  [0x3+0x1]
          Copyright: false  [0x3+0x1]
          Original: true  [0x3+0x1]
          Emphasis: none (0x0)  [0x3+0x1]
        Audio data  [0x4+0x11c]
    ▾ Frame 1 — MPEG-2 Layer II, 32 kbps, 16000 Hz, mono, 288 bytes  [0x120+0x120]
      ▾ Header  [0x120+0x4]
          Frame sync: 0x7ff  [0x120+0x2]
          Version: MPEG-2 (0x2)  [0x121+0x1]
          Layer: Layer II (0x2)  [0x121+0x1]
          Protection: 1 — no CRC  [0x121+0x1]
          Bitrate index: 4 — 32 kbps  [0x122+0x1]
          Sample rate index: 2 — 16000 Hz  [0x122+0x1]
          Padding: false  [0x122+0x1]
          Private: false  [0x122+0x1]
          Channel mode: mono (0x3)  [0x123+0x1]
          Mode extension: 0  [0x123+0x1]
          Copyright: false  [0x123+0x1]
          Original: true  [0x123+0x1]
          Emphasis: none (0x0)  [0x123+0x1]
        Audio data  [0x124+0x11c]
